--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.9.9",
     "mongoose-pagination": "^1.0.0",
     "path": "^0.12.7",
+    "twilio": "^3.43.1",
     "urlsafe-base64": "^1.0.0",
     "web-push": "^3.4.3"
   },
